# fars

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: publish.yml
doc/: benchmark.md
src/: fars.rs
src/cmd_fars/: mod.rs  one.rs  region.rs  size.rs  some.rs
tests/: cli_fars.rs
