[package]
name = "fars"
version = "0.0.1"
authors = ["wang-q <wang-q@outlook.com>"]
description = "Command line tools for fasta files"
documentation = "https://github.com/wang-q/fars"
homepage = "https://github.com/wang-q/fars"
repository = "https://github.com/wang-q/fars"
readme = "README.md"
categories = ["command-line-utilities", "science"]
license = "MIT"
edition = "2018"
publish = false

[[bin]]
name = "fars"
path = "src/fars.rs"

[dependencies]
clap = { version = "3.1.1", features = ["derive", "cargo"] }
regex = "1"
lazy_static = "1.3.0"
flate2 = "1.0"
itertools = "0.10.3"
bio = "0.41.0"

intspan = "^0.6.1"

[build-dependencies]

[dev-dependencies]
tempfile = "3.1.0"
assert_cmd = "0.11"
predicates = "1"

[profile.release]
lto = true
