[package]
name = "fars"
version = "0.0.1"
authors = ["wang-q <wang-q@outlook.com>"]
description = "Command line tools for fasta files"
documentation = "https://github.com/wang-q/fars"
homepage = "https://github.com/wang-q/fars"
repository = "https://github.com/wang-q/fars"
readme = "README.md"
categories = ["command-line-utilities", "science"]
license = "MIT"
edition = "2018"
publish = false

[[bin]]
name = "fars"
path = "src/fars.rs"

[dependencies]
clap = { version = "4.3.10", features = ["cargo"] }
anyhow = "1.0.66"
regex = "1.7.0"
lazy_static = "1.4.0"
flate2 = "1.0.25"
itertools = "0.11.0"
bio = "0.41.0"

intspan = "0.7.1"

[build-dependencies]

[dev-dependencies]
tempfile = "3.3.0"
assert_cmd = "2.0.4"
predicates = "3.0.3"

[profile.release]
lto = true
